--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-**node_modules
+# Ignore node_modules directory
+**node_modules/
+
+# Ignore .env file
 .env
+
+# Other files/folders to ignore
+.DS_Store
+**dist/
+*.log
